Add link to new_group_path

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -24,7 +24,7 @@ html
                     = link_to a.group.name, group_path(a.group)
                 li.divider
                 li
-                  = link_to new_group_path do
+                  = link_to new_session_path do
                     span.glyphicon.glyphicon-plus
                     |  新規グループ
           ul.nav.navbar-nav.navbar-right
