--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -37,6 +37,9 @@ html
                 span.caret
               ul.dropdown-menu
                 li
+                  = link_to 'アカウントを表示', group_member_account_path(current_group, current_account.member)
+                li.divider
+                li
                   = link_to session_path, method: :delete do
                     = "#{current_group.name} からサインアウト"
     .container        
