Add accounts#edit and password updating

--- a/app/views/accounts/show.html.slim
+++ b/app/views/accounts/show.html.slim
@@ -1,1 +1,3 @@
-= @account.email
+= link_to 'Edit', edit_group_member_account_path(current_group, @member), class: 'btn btn-default'
+p
+  = @account.email
