--- a/app/views/accounts/show.html.slim
+++ b/app/views/accounts/show.html.slim
@@ -1,3 +1,6 @@
+h1 Show Account
 = link_to 'Edit', edit_group_member_account_path(current_group, @member), class: 'btn btn-default'
+hr
 p
+  | Email: 
   = @account.email
