Add accounts#edit and accounts#update

--- a/app/views/members/index.html.slim
+++ b/app/views/members/index.html.slim
@@ -1,15 +1,17 @@
+h1 メンバー一覧
+
 table.table
   tr
-    th 姓
-    th 名
-    th 学籍番号
-    th アカウント 
+    th First Name
+    th Last Name
+    th School ID
+    th Account
     th
   - @members.each do |m|
     tr
       td= m.profile&.first_name
       td= m.profile&.last_name
-      td= m.profile&.schoolId
+      td= m.profile&.school_id
       td= m.account&.email
       td
         = link_to '編集', edit_group_member_path(current_group, m)
