Add invitations#new link

--- a/app/views/members/index.html.slim
+++ b/app/views/members/index.html.slim
@@ -1,5 +1,7 @@
 h1 メンバー一覧
 = link_to 'New Member', new_group_member_path, class: 'btn btn-primary'
+|  
+= link_to 'Invite New Account', new_group_invitation_path, class: 'btn btn-default'
 hr
 
 table.table
