Add invitation mail preview

--- a/app/views/invitation_mailer/send_invitation.html.slim
+++ b/app/views/invitation_mailer/send_invitation.html.slim
@@ -1,1 +1,11 @@
-= @invitation.group.name
+h1 
+  | Rekimei のグループ、#{@invitation.group.name} に招待されました
+
+p Rekimei はシンプルで美しいグループウェアです。Rekimei でグループ活動をほんの少し、楽しくしましょう!
+p
+  a(href="#") #{@invitation.group.name} に参加する
+
+p
+  | アカウントは、<b>グループに対して一つ</b>必要です。
+  br
+  | 既に Rekimei を他グループでご利用いただいている場合も、お手数ですが、新しいアカウントを作る必要があります。
