Set and display inviter and invitee

--- a/app/views/invitation_mailer/send_invitation.html.slim
+++ b/app/views/invitation_mailer/send_invitation.html.slim
@@ -9,3 +9,6 @@ p
   | アカウントは、<b>グループに対して一つ</b>必要です。
   br
   | 既に Rekimei を他グループでご利用いただいている場合も、お手数ですが、新しいアカウントを作る必要があります。
+
+p
+  | <b>招待者</b>: #{@invitation.inviter.email}
