Fix controllers and views

--- a/app/views/accounts/_form.html.slim
+++ b/app/views/accounts/_form.html.slim
@@ -1,4 +1,4 @@
-= simple_form_for account, url: group_member_account_path(group, member) do |f|
+= simple_form_for [group, account] do |f|
   = f.input :email
   = f.input :current_password
   = f.input :new_password
