--- a/app/views/accounts/edit.html.slim
+++ b/app/views/accounts/edit.html.slim
@@ -1,2 +1,2 @@
 h1 Edit Account
-= render partial: 'form', locals: { group: current_group, member: @member, account: @account }
+= render partial: 'form', locals: { group: current_group, account: @account }
