--- a/app/views/accounts/show.html.slim
+++ b/app/views/accounts/show.html.slim
@@ -1,5 +1,5 @@
 h1 Show Account
-= link_to 'Edit', edit_group_member_account_path(current_group, @member), class: 'btn btn-default'
+= link_to 'Edit', edit_group_account_path(current_group, @account), class: 'btn btn-default'
 hr
 p
   | Email: 
