--- a/app/views/accounts/show.html.slim
+++ b/app/views/accounts/show.html.slim
@@ -4,3 +4,12 @@ hr
 p
   | Email: 
   = @account.email
+p
+  | First Name:
+  = @account.profile.first_name
+p
+  | Last Name:
+  = @account.profile.last_name
+p
+  | School ID:
+  = @account.profile.school_id
