--- a/app/views/accounts/_form.html.slim
+++ b/app/views/accounts/_form.html.slim
@@ -5,7 +5,7 @@
   = f.input :new_password
 
   h2 Profile
-  = f.fields_for :profile do |pf|
+  = f.fields_for :profile, account.profile || account.build_profile do |pf|
     = pf.input :first_name
     = pf.input :last_name
     = pf.input :school_id
