--- a/app/views/accounts/index.html.slim
+++ b/app/views/accounts/index.html.slim
@@ -1,5 +1,5 @@
 h1 メンバー一覧
-/ = link_to 'New Member', new_group__path, class: 'btn btn-primary'
+= link_to 'New Invitation', new_group_invitation_path(current_group), class: 'btn btn-primary'
 hr
 
 table.table
